# CppCMakeStarter

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  conanfile.py  conanfile.txt
.devcontainer/: .Dockerfile.kate-swp  Dockerfile  devcontainer.json  post_create.sh
cmake/: CPM.cmake  CPM_dependencies.cmake  CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  create_warnings_list.cmake  default_options.cmake  enable_sanitizers.cmake  enable_static_analysis.cmake  index.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
scripts/: cpp_tools_install.sh
src/: CMakeLists.txt  main.cpp
src/factorial/: CMakeLists.txt  factorial.cpp  factorial.h
src/prime/: CMakeLists.txt  prime.cpp  prime.h
test/: CMakeLists.txt  catch_main.cpp  tests.cpp
test/factorial_test/: CMakeLists.txt  factorial_tests.cpp
test/prime_test/: CMakeLists.txt  prime_tests.cpp
